--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.11",
     "lucide-react": "^0.562.0",
-    "next": "^16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "^15.5.12",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-google-charts": "^5.2.1",
     "tailwind-merge": "^3.4.0"
   },
